--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
-  "name": "bunagram",
-  "module": "index.ts",
-  "type": "module",
+  "name": "Bunagram",
   "private": true,
   "devDependencies": {
     "@eslint/js": "^9.36.0",
-    "@types/bun": "latest",
     "@typescript-eslint/eslint-plugin": "^8.44.0",
     "@typescript-eslint/parser": "^8.44.0",
     "eslint": "^9.36.0",
@@ -16,15 +13,10 @@
     "prettier": "^3.6.2",
     "typescript-eslint": "^8.44.0"
   },
-  "peerDependencies": {
-    "typescript": "^5.9.2"
-  },
   "scripts": {
-    "start": "bun run backend/src/server/cli.ts",
-    "test": "bun test",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "format": "prettier --write .",
-    "format:check": "prettier --check ."
+    "format": "bun run format",
+    "format:check": "bun run format:check"
   }
 }
