--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,12 @@
 {
+  "scripts": {
+    "build": "tailwindcss -i ./src/index.css -o ./dist/index.css -w",
+     "dev": "bun run build & live-server --port=3000 --wait=100"
+  },
   "dependencies": {},
   "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
     "tailwindcss": "^3.4.0"
   }
 }
