chore: update index html for the deployment

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,7 @@
   "scripts": {
     "build:css": "tailwindcss -i ./src/index.css -o ./dist/index.css",
     "build:ts": "bun build ./src/main.ts --outdir ./dist --target browser --format esm",
-    "build": "bun run build:ts && bun run build:css"
+    "build": "bun run build:ts && bun run build:css && cp index.html dist/index.html"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
